2051.	[port]		More strtol() fixes. [RT #16249]

2050.	[bug]		Parsing of NSAP records was not case insensitive.
			[RT #16287]

2049.	[bug]		Restore SOA before AXFR when falling back from
			a attempted IXFR when transfering in a zone.
			Allow a initial SOA query before attempting
			a AXFR to be requested. [RT #16156]

2048.	[bug]		It was possible to loop forever when using
			avoid-v4-udp-ports / avoid-v6-udp-ports when
			the OS always returned the same local port.
			[RT #16182]

2047.	[bug]		Failed to initialise the interface flags to zero.
			[RT #16245]

2046.	[bug]		rbtdb.c:rdataset_setadditional() could cause duplicate
			cleanup [RT #16247].

2045.	[func]		use lock buckets for acache entries to limit memory
			consumption. [RT #16183]

2044.	[port]		add support for atomic operations for Itanium.
			[RT #16179]

2043.	[port]		nsupdate/nslookup: Force the flushing of the prompt
			for interactive sessions. [RT#16148]

2042.	[bug]		named-checkconf was incorrectly rejecting the
			logging category "config". [RT #16117]

2041.	[bug]		"configure --with-dlz-bdb=yes" produced a bad
			set of libraries to be linked. [RT #16129]

2040.	[bug]		rbtdb no_references() could trigger an INSIST
			failure with --enable-atomic.  [RT #16022]

2039.	[func]		Check that all buffers passed to the socket code
			have been retrieved when the socket event is freed.
			[RT #16122]

2038.	[bug]		dig/nslookup/host was unlinking from wrong list
			when handling errors. [RT #16122]

2037.	[func]		When unlinking the first or last element in a list
			check that the list head points to the element to
			be unlinked. [RT #15959]

2036.	[bug]		'rndc recursing' could cause trigger a REQUIRE.
			[RT #16075]

2035.	[func]		Make falling back to TCP on UDP refresh failure
			optional. Default "try-tcp-refresh yes;" for BIND 8
			compatibility. [RT #16123]

2034.	[bug]		gcc: set -fno-strict-aliasing. [RT #16124]

2033.	[bug]		We wern't creating multiple client memory contexts